// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listing component matches snapshot with empty data (uses mockedData) 1`] = `
<RCTScrollView
  data={[]}
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  viewabilityConfigCallbackPairs={[]}
>
  <View />
</RCTScrollView>
`;

exports[`Listing component matches snapshot with provided data 1`] = `
<RCTScrollView
  data={
    [
      {
        "id": "1",
        "name": "John Doe",
        "role": "ADMIN",
      },
      {
        "id": "2",
        "name": "Jane Smith",
        "role": "MANAGER",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 12,
            "marginBottom": 8,
            "padding": 12,
            "paddingLeft": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#E6F0FF",
              "borderRadius": 5,
              "height": 45,
              "justifyContent": "center",
              "width": 45,
            }
          }
        >
          <Text
            style={
              {
                "color": "#4D94FF",
                "fontSize": 18,
              }
            }
          >
            J
          </Text>
        </View>
        <View
          style={
            {
              "width": "100%",
            }
          }
        >
          <Text
            style={
              {
                "fontWeight": "bold",
              }
            }
          >
            John Doe
          </Text>
          <Text
            style={
              {
                "color": "#A9A9A9",
              }
            }
          >
            ADMIN
          </Text>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 12,
            "marginBottom": 8,
            "padding": 12,
            "paddingLeft": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#E6F0FF",
              "borderRadius": 5,
              "height": 45,
              "justifyContent": "center",
              "width": 45,
            }
          }
        >
          <Text
            style={
              {
                "color": "#4D94FF",
                "fontSize": 18,
              }
            }
          >
            J
          </Text>
        </View>
        <View
          style={
            {
              "width": "100%",
            }
          }
        >
          <Text
            style={
              {
                "fontWeight": "bold",
              }
            }
          >
            Jane Smith
          </Text>
          <Text
            style={
              {
                "color": "#A9A9A9",
              }
            }
          >
            MANAGER
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
